--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,37 @@
 /* Other rules */
 
 * {
-    box-sizing: border-box !important;
-    font-family: 'Segoe UI' !important;
+  box-sizing: border-box !important;
+  font-family: "Segoe UI" !important;
+}
+
+body {
+  background-color: #ebedee;
+}
+
+header {
+  background-color: white;
 }
 
 .main {
-    margin: auto;
-    max-width: 1268px;
+  margin: auto;
+  max-width: 1268px;
 }
 
 .main-offers {
-    display: flex;
-    flex-flow: row wrap;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .main-offers-img {
-    width: 235px;
-    height: 428px;
-    object-fit: cover;
+  width: 235px;
+  height: 428px;
+  object-fit: cover;
+}
+
+.payment-form {
+  width: 599px;
+  height: 500px;
+  margin: auto;
+  background-color: white;
 }
